crates/nirvash-macros/tests/fixtures/code_tests_kani_engine_removed.rs
use nirvash_macros::code_tests;

#[code_tests(
    profiles = [
        removed = {
            coverage = [transitions],
            engines = [kani(depth = 4)],
        },
    ],
)]
struct Spec;

fn main() {}
